<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3361CC"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="204dp"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="122dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/imagen_2022_09_27_234107276_removebg_preview" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/textview1"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="casual"
        android:text="@string/textview7"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="casual"
        android:text="@string/textview8"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="casual"
        android:text="@string/textview9"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="casual"
        android:text="@string/textview10"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="casual"
        android:text="@string/textview11"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView

        android:layout_marginLeft="20dp"
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/textview12"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView

        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview30" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="250dp"
       >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="140dp"
                android:layout_height="94dp"
                app:srcCompat="@drawable/logotipo_de_xbox" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="140dp"
                android:layout_height="94dp"
                app:srcCompat="@drawable/playstation_logotype" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="120dp"
                android:layout_height="92dp"
                app:srcCompat="@drawable/nintendo_switch" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</LinearLayout>