<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3361CC">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="281dp"
        android:layout_marginTop="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="140dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ninja" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="140dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/mapa" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="140dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/bombilla_de_idea" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview4"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview6"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview5"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/lucha" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/deportes_con_balones" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/rompecabezas" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview20"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview21"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview22"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="243dp"
        android:fontFamily="casual"
        android:text="@string/textview8"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="413dp"
        android:layout_height="365dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="140dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/estrategia" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="140dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/bandera_de_carreras__1_" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="140dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/pistola" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview23"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview24"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/textview25"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/arcada" />

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/volante" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/textview26"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/textview27"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>