<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3361CC">

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="626dp"
        android:fontFamily="casual"
        android:text="@string/textview47"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="522dp"
        android:ems="10"
        android:hint="@string/edittext"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView61"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="242dp"
        android:text="@string/textview48"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextMultiLine5"
        android:layout_width="346dp"
        android:layout_height="165dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/multi5"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="227dp"
        android:text="@string/textview49"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine5" />

    <EditText
        android:id="@+id/editTextTextMultiLine6"
        android:layout_width="339dp"
        android:layout_height="115dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/multi6"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />

    <ProgressBar
        android:indeterminateTint="@color/yellow"
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="189dp"
        app:layout_constraintBottom_toTopOf="@+id/textView64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine6" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="casual"
        android:text="@string/textview50"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
</androidx.constraintlayout.widget.ConstraintLayout>