<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3361CC">

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="129dp"
        android:layout_height="158dp"
        app:srcCompat="@drawable/captura_de_pantalla_2022_10_03_231644"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="241dp"
        android:layout_height="129dp"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/white"

        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="54dp"
        tools:text="@string/textview28" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="number"
        android:text="@string/textview29"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="190dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:indeterminate="false"
        android:indeterminateTint="@color/yellow"
        android:progressTint="#FFEB3B"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="238dp" />

    <ImageView
        app:tint="@color/white"
        android:id="@+id/imageView33"
        android:layout_width="30sp"
        android:layout_height="30sp"
        app:srcCompat="@drawable/corazon"
        tools:layout_editor_absoluteX="355dp"
        tools:layout_editor_absoluteY="54dp" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="67dp"
        android:backgroundTint="#070707"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="300dp">

        <Button

            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#02183E"
            android:text="@string/button5"
            android:textColor="#EBFB4B"
            app:cornerRadius="100px" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#02183E"
            android:text="@string/button6"
            android:textColor="#EBFB4B"
            app:cornerRadius="100px" />

        <Button
            android:id="@+id/button8"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#02183E"
            android:text="Button"
            android:textColor="#EBFB4B"
            app:cornerRadius="100px" />

    </LinearLayout>

    <View

        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="@color/yellow"
        android:backgroundTint="#FFEB3B"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="367dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#050505"
        android:text="@string/textview32"
        android:textColor="#FFE752"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="401dp" />

</androidx.constraintlayout.widget.ConstraintLayout>